actions.

The orderinvoice table has ben given currency and debitcost fields,
the latter used for charging against the budget exclusively, the other
cost fields are optionaly and purely for information only.

Bugfix to the new_staff.php page in the EntryBook which was producing
a fatal error in PHP5.

Bugfix to the install process which was failing to create the
categorydef table.


Version ClaSS-0.8.46 release (2008/05/05)
-----------------------------------------

Added a list_formgroups() function for consistency.

Improved the staff_details page to select by username or surname and
to seperate out disabled logins to another list. Allowed get_user() to
take uid or username as key.

The MarkBook column filter now recognises profile assessments distinct
form tracking and reporting.

Tidied up SEN related things. Including, moving the SEN array out of
the main fetchStudent call to its own fetchSEN() function. Same as for
MedicalFlag, the SENFlag is sufficient within Student everywhere
except in the SEN book. Altered the sentype db table; sentype field is
now char(4) - fixing a bug; an entryn field added.

Allowed for multiple SENtypes per student.

Managment of access permissions for budgets is now part of the
orders_limit.php page.

Included login stats under usage_statistics for parents and students
accessing the eportfolios.

Bugfix to the get_budget_current() function.


Version ClaSS-0.8.45 release (2008/04/25)
-----------------------------------------

A page of statistics added as an option under Report > Manage will
count homeworks for staff and subjects over the past two weeks and the
whole academic year for comparison.

A new eportfolio function epf_get_fileurl() works out the url to grab
a file from the eportfolio. Currently only implemented for photo icons
which are placed on the student_view.php page.

Added the path to the eportfolio's data directory as a $CFG variable
in school.php.

The Order book now takes account of an order's currency when